# ring-resonator-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: compare_fdtd_analytical.py  generate_readme_images.py  qi_vs_loss_sin.py  run_ring.py
lumerical/: pyproject.toml
lumerical/examples/: run_mmi_sweep.py  run_ring.py
lumerical/src/lumfdtd/: design.py
lumerical/tests/: test_design.py
ring_toolkit/: __init__.py  analysis.py  analytical_model.py  components.py  geometry.py  params.py  simulation.py
src/lumfdtd/: analysis.py
tests/: test_analysis.py  test_analytical_model.py  test_components.py  test_params.py
