[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ring-resonator-toolkit"
version = "0.1.0"
description = "Parametric ring resonator design toolkit with gdsfactory layout generation and Lumerical FDTD automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alex Baburin", email = "baburinalex@gmail.com" }
]
keywords = ["photonics", "silicon-photonics", "gdsfactory", "lumerical", "fdtd", "ring-resonator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "gdsfactory>=7.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/baburinalex/ring-resonator-toolkit"
Issues = "https://github.com/baburinalex/ring-resonator-toolkit/issues"

[tool.setuptools.packages.find]
include = ["ring_toolkit*"]
exclude = ["tests*", "notebooks*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]