[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lumfdtd"
version = "0.1.0"
description = "Si3N4 photonic component FDTD modeling via Ansys Lumerical lumapi (1x2 MMI splitter + ring resonator)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Baburin" }]
keywords = ["photonics", "FDTD", "Lumerical", "silicon nitride", "ring resonator", "MMI"]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
plot = ["matplotlib>=3.7"]

[project.urls]
Repository = "https://github.com/baburinalex/lumerical-fdtd-photonics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]
